@@ -238,6 +238,12 @@ In the above example, the right NUT variable is obviously "device.model".
 The MIB definition file (.mib) also contains some description of these OIDs,
 along with the possible enumerated values.
 
+NOTE: To test existing data points (including those not yet translated
+to standard NUT mappings conforming to <<nut-names,NUT command and
+variable naming scheme>>), you can use custom drivers built after you
+`./configure --with-unmapped-data-points`.
+Production driver builds must not include any non-standard names.
+
 ////////////////////////////////////////////////////////////////////////////////
 FIXME:
 
