@@ -173,6 +173,11 @@ https://github.com/networkupstools/nut/milestone/8
    to eradicate `@PIDPATH@/nut` ambiguity in favor of `@ALTPIDPATH@` for the
    unprivileged processes vs. `@PIDPATH@` for those running as root [#1719]
 
+ - `configure` script enhanced: `--with-unmapped-data-points` option allows
+   to build SNMP and USB-HID subdrivers with entries discovered by the scripts
+   which generated them from data walks, but developers did not rename yet
+   to NUT mappings conforming to `docs/nut-names.txt` standards [#1699]
+
  - PyNUT.py version bumped to 1.5.0 with some improvements:
    * `ListClients()` method fixed (was broken in many ways), and is now
      CI-tested [#549]
